변수명 변경